force-app/main/default/objects/Search_Component_Configuration_Column__mdt/Search_Component_Configuration_Column__mdt.object-meta.xml
<CustomObject>
    <description>Table columns to appear on custom Search and Match Components</description>
    <label>Search Component Configuration Column</label>
    <pluralLabel>Search Component Configuration Columns</pluralLabel>
</CustomObject>