force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/Field_Reference__c.field-meta.xml
<CustomField>
    <fullName>Field_Reference__c</fullName>
    <label>Field Reference</label>
    <metadataRelationshipControllingField>Search_Component_Configuration_Column__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Search_Component_Configuration_Columns</relationshipLabel>
    <relationshipName>Search_Component_Configuration_Columns</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>