force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Search_Component_Configuration_Columns1</relationshipLabel>
    <relationshipName>Search_Component_Configuration_Columns1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>