force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/Search_Component_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Search_Component_Configuration__c</fullName>
    <label>Search Component Configuration</label>
    <referenceTo>Search_Component_Configuration__mdt</referenceTo>
    <relationshipLabel>Search Component Configuration Columns</relationshipLabel>
    <relationshipName>Search_Component_Configuration_Columns</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>