force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/Sortable__c.field-meta.xml
<CustomField>
    <fullName>Sortable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Table can be sorted by this column by clicking on header</description>
    <label>Sortable</label>
    <type>Checkbox</type>
</CustomField>